# simple_cmd_interpreter

./: .gitignore  LICENSE  README.md  pyproject.toml
simple_cmd_interpreter/: interpreter.py
