[tool.poetry]
name = "simple-cmd-interpreter"
version = "0.1.0"
description = "A simple command interpreter."
authors = ["Albert Latham <me@albertlatham.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
